--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -3,7 +3,7 @@ name: Profile Readme Development Stats
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '12 15 * * *'
+    - cron: '14 15 * * *'
 
 jobs:
   update-readme:
@@ -11,3 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@V3
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
