--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -2,7 +2,7 @@ name: Waka Readme
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '30 18 * * *'
 
 jobs:
   update-readme:
@@ -13,3 +13,11 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          LOCALE: "ko_KR"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_OS: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_EDITORS: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_LOC_CHART: "False"
